# NodeGet

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPER.md  Dockerfile  Dockerfile.server  README.md  compose.pgsql.yml  compose.sqlite.yml  docker-compose.postgres.yml  docker-compose.sqlite.yml  entrypoint.sh
.claude/: session-context.md
.github/ISSUE_TEMPLATE/: bug.yaml
.github/actions/setup-system/: action.yml
.github/workflows/: agent-build.yml  docker-image.yml  docker-publish.yml  release-server.yml  release.yml  server-build.yml  server-ci.yml  server-docker.yml
CONTRIBUTING/: README.md
CONTRIBUTING/binaries/: nodeget-agent.md  nodeget-server.md
CONTRIBUTING/crates/: ng-config.md  ng-core.md  ng-crontab.md  ng-db.md  ng-infra.md  ng-js-runtime.md  ng-js-worker.md  ng-kv.md  ng-monitoring.md  ng-static.md  ng-task.md  ng-terminal.md  ng-token.md
CONTRIBUTING/topics/: architecture.md  conventions.md  cross-cutting.md
agent/: Cargo.toml  config.toml.example
agent/src/: config_access.rs  dry_run.rs  main.rs  ntp.rs
agent/src/monitoring/: gpu.rs  impls.rs  mod.rs
agent/src/rpc/: mod.rs  monitoring_data_report.rs  multi_server.rs
agent/src/tasks/: dns.rs  execute.rs  http_request.rs  ip.rs  mod.rs  pty.rs  self_update.rs
crates/ng-agent-deps/: Cargo.toml
crates/ng-config/: Cargo.toml
crates/ng-core/: Cargo.toml
crates/ng-core/src/: lib.rs  self_update.rs
crates/ng-core/src/permission/: data_structure.rs  permission_checker.rs
crates/ng-core/src/utils/: mod.rs  version.rs
crates/ng-crontab/: Cargo.toml
crates/ng-db/: Cargo.toml
crates/ng-infra/: Cargo.toml
crates/ng-js-runtime/: Cargo.toml
crates/ng-js-runtime/src/: inline_call.rs  js_worker_service.rs  runtime_pool.rs  server_runtime.rs
crates/ng-js-worker/: Cargo.toml
crates/ng-kv/: Cargo.toml
crates/ng-monitoring/: Cargo.toml
crates/ng-static/: Cargo.toml
crates/ng-task/: Cargo.toml
crates/ng-terminal/: Cargo.toml
crates/ng-token/: Cargo.toml
docker/: entrypoint.sh
docker/server/: README.md  docker-entrypoint.sh  postgres.env.example
docs/.vitepress/: config.mjs  dev-sidebar-zh.config.js  guide-sidebar-zh.config.js  theme-en.config.js  theme-zh.config.js
docs/api/: errors.md  framework.md  index.md
docs/guide/: log.md  plan.md  tech-stack.md
nodeget-lib/: Cargo.toml  build.rs
nodeget-lib/src/: error.rs  lib.rs  self_update.rs
nodeget-lib/src/args_parse/: agent.rs  server.rs
nodeget-lib/src/config/: agent.rs  mod.rs  server.rs
nodeget-lib/src/crontab/: mod.rs  result.rs
nodeget-lib/src/crontab_result/: query.rs
nodeget-lib/src/js_result/: query.rs
nodeget-lib/src/js_runtime/: mod.rs
nodeget-lib/src/kv/: mod.rs
nodeget-lib/src/metadata/: mod.rs
nodeget-lib/src/monitoring/: data_structure.rs  mod.rs  query.rs
nodeget-lib/src/permission/: create.rs  data_structure.rs  token_auth.rs
nodeget-lib/src/task/: mod.rs  query.rs
nodeget-lib/src/utils/: error_message.rs  mod.rs  server_json.rs  uuid.rs  version.rs
server/: Cargo.toml  config.toml.example  generate_entity.sh
server/migration/src/: lib.rs  m20260113_000000_create_monitoring_uuid.rs  m20260113_044428_create_static_monitoring.rs  m20260115_131325_create_dynamic_monitoring.rs  m20260118_030100_create_task.rs  m20260131_112949_create_token.rs  m20260205_024306_create_kv.rs  m20260205_024306_create_metadata.rs  m20260206_040842_create_crontab_result.rs  m20260327_150739_create_js_worker.rs  m20260328_033808_create_js_result.rs  m20260415_000000_create_dynamic_monitoring_summary.rs  m20260517_000001_add_enable_to_static.rs
server/src/: db_connection.rs  db_registry.rs  main.rs  monitoring_buffer.rs  monitoring_last_cache.rs  monitoring_uuid_cache.rs  rpc_nodeget.rs  rpc_timing.rs
server/src/cache/: mod.rs
server/src/config/: mod.rs  parse.rs
server/src/crontab/: cache.rs  mod.rs  task.rs
server/src/db_connection/clean_up/: generic.rs  mod.rs  postgres.rs  utils.rs
server/src/entity/: crontab_result.rs  dynamic_monitoring.rs  dynamic_monitoring_summary.rs  js_result.rs  js_worker.rs  mod.rs  monitoring_uuid.rs  prelude.rs  static_monitoring.rs  task.rs  token.rs
server/src/js_runtime/: mod.rs  nodeget.rs  runtime_pool.rs
server/src/kv/: mod.rs
server/src/logging/: mod.rs
server/src/rpc/: agent.rs  mod.rs  nodeget.rs  task.rs
server/src/rpc/agent/: delete_dynamic.rs  delete_dynamic_summary.rs  delete_static.rs  mod.rs  query.rs  query_dynamic.rs  query_dynamic_avg.rs  query_dynamic_multi_last.rs  query_dynamic_summary.rs  query_dynamic_summary_avg.rs  query_dynamic_summary_multi_last.rs  query_static.rs  query_static_avg.rs  query_static_multi_last.rs  report.rs  report_dynamic.rs  report_dynamic_summary.rs  report_static.rs
server/src/rpc/agent_uuid/: list_all.rs  list_all_with_agent_mode.rs  mod.rs
server/src/rpc/crontab/: auth.rs  create.rs  delete.rs  edit.rs  get.rs  mod.rs  set_enable.rs  toggle_enable.rs
server/src/rpc/crontab_result/: auth.rs
server/src/rpc/db/: exec_sql.rs  exec_templating.rs
server/src/rpc/js_result/: delete.rs  mod.rs  query.rs
server/src/rpc/js_worker/: create.rs  delete.rs  get_rt_pool.rs  mod.rs  read.rs  route_name.rs  run.rs  service.rs  update.rs
server/src/rpc/kv/: auth.rs  delete_namespace.rs  get_multi_value.rs  list_all_namespace.rs  mod.rs
server/src/rpc/metadata/: get.rs  mod.rs  write.rs
server/src/rpc/nodeget/: exec_sql.rs  list_all_agent_uuid.rs
server/src/rpc/static_bucket/: mod.rs  update.rs
server/src/rpc/task/: create_task.rs  create_upload_task.rs  delete.rs  mod.rs  query.rs  upload_task_result.rs
server/src/rpc/token/: change_password.rs  create.rs  delete.rs  get.rs  list_all_tokens.rs  mod.rs  roll_token_secret.rs  utils.rs
server/src/static_file/: cache.rs  mod.rs
server/src/subcommands/: init.rs  mod.rs  roll_super_token.rs  serve.rs
server/src/terminal/: check_agent.rs  mod.rs
server/src/token/: cache.rs  generate_token.rs  get.rs  mod.rs  super_token.rs
src/: main.rs  utils.rs
src/monitoring/: data_structure.rs
(+177 files in other folders)
