[package]
name = "nodeget-lib"
version = "0.0.1"
edition = "2024"

[dependencies]
uuid = { version = "1.19.0", default-features = false, features = ["std", "v5", "fast-rng", "v4"] }
machine-uid = "0.5.4"
miniserde = { version = "0.1.45", default-features = false, features = ["std"], optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[features]
for-agent = ["miniserde"]
for-server = ["serde", "serde_json"]