[package]
name = "nodeget-server"
version = "0.0.1"
edition = "2024"
description = "Next-generation server monitoring and management tools"
license = "AGPL-3"
readme = "../README.md"
repository = "https://github.com/NodeSeekDev/NodeGet"
categories = ["asynchronous", "command-line-utilities", "network-programming", "os"]

[dependencies]
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
nodeget-lib = { path = "../nodeget-lib", features = ["for-server"] }
migration = { path = "migration" }

parking_lot = "0.12.5"
uuid = { version = "1.19.0", default-features = false, features = ["v4", "serde", "std", "fast-rng", "v5"] }
sea-orm = { version = "2.0.0-rc.28", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres"] }
serde = "1.0.228"
serde_json = "1.0.149"
jsonrpsee = { version = "0.26.0", default-features = false, features = ["server", "macros"] }
toml = { version = "0.9.11+spec-1.1.0", default-features = false, features = ["std", "serde", "parse"] }

# Logging
log = { version = "0.4.29", default-features = false, features = ["std", "serde"] }
simple_logger = { version = "5.1.0", default-features = false, features = ["threads", "time", "timestamps", "colored", "colors"] }
