[package]
name = "ng-core"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = []
for-server = []
for-agent = []

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
