[package]
name = "ng-js-runtime"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = []
server = [
    "dep:rquickjs",
    "dep:llrt_fetch",
    "dep:llrt_buffer",
    "dep:llrt_stream_web",
    "dep:llrt_url",
    "dep:llrt_util",
    "dep:llrt_timers",
    "dep:uuid",
    "dep:tokio",
    "dep:tracing",
    "dep:anyhow",
    "dep:ng-db",
    "ng-infra/server",
    "dep:futures-util",
]

[dependencies]
ng-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Server feature dependencies
rquickjs = { git = "https://github.com/delskayn/rquickjs.git", default-features = false, features = ["futures"], optional = true }
llrt_fetch = { git = "https://github.com/awslabs/llrt.git", default-features = false, features = ["http1", "compression-rust", "webpki-roots", "tls-ring"], optional = true }
llrt_buffer = { git = "https://github.com/awslabs/llrt.git", default-features = false, optional = true }
llrt_stream_web = { git = "https://github.com/awslabs/llrt.git", default-features = false, optional = true }
llrt_url = { git = "https://github.com/awslabs/llrt.git", default-features = false, optional = true }
llrt_util = { git = "https://github.com/awslabs/llrt.git", default-features = false, optional = true }
llrt_timers = { git = "https://github.com/awslabs/llrt.git", default-features = false, optional = true }
uuid = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
ng-db = { workspace = true, optional = true }
ng-infra = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
